--- a/app/Resources/static/themes/material/css/media_queries.scss
+++ b/app/Resources/static/themes/material/css/media_queries.scss
@@ -54,6 +54,7 @@
     max-width: 35em;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 100px;
     font-size: 18px;
 
     > header > h1 {
