--- a/src/Wallabag/CoreBundle/Resources/views/base.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/base.html.twig
@@ -14,31 +14,31 @@
             <meta http-equiv="X-UA-Compatible" content="IE=10">
             <![endif]-->
 
-            <link rel="apple-touch-icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-152.png') }}" sizes="152x152">
-            <link rel="icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-152.png') }}" sizes="152x152">
+            <link rel="apple-touch-icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-152.png') }}" sizes="152x152">
+            <link rel="icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-152.png') }}" sizes="152x152">
 
-            <link rel="apple-touch-icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-144.png') }}" sizes="144x144">
-            <link rel="icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-144.png') }}" sizes="144x144">
+            <link rel="apple-touch-icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-144.png') }}" sizes="144x144">
+            <link rel="icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-144.png') }}" sizes="144x144">
 
-            <link rel="apple-touch-icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-120.png') }}" sizes="120x120">
-            <link rel="icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-120.png') }}" sizes="120x120">
+            <link rel="apple-touch-icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-120.png') }}" sizes="120x120">
+            <link rel="icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-120.png') }}" sizes="120x120">
 
-            <link rel="apple-touch-icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-114.png') }}" sizes="114x114">
-            <link rel="icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-114.png') }}" sizes="114x114">
+            <link rel="apple-touch-icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-114.png') }}" sizes="114x114">
+            <link rel="icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-114.png') }}" sizes="114x114">
 
-            <link rel="apple-touch-icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-76.png') }}" sizes="76x76">
-            <link rel="icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-76.png') }}" sizes="76x76">
+            <link rel="apple-touch-icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-76.png') }}" sizes="76x76">
+            <link rel="icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-76.png') }}" sizes="76x76">
 
-            <link rel="apple-touch-icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-72.png') }}" sizes="72x72">
-            <link rel="icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-72.png') }}" sizes="72x72">
+            <link rel="apple-touch-icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-72.png') }}" sizes="72x72">
+            <link rel="icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-72.png') }}" sizes="72x72">
 
-            <link rel="apple-touch-icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-57.png') }}" sizes="57x57">
-            <link rel="icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon-57.png') }}" sizes="57x57">
+            <link rel="apple-touch-icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-57.png') }}" sizes="57x57">
+            <link rel="icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon-57.png') }}" sizes="57x57">
 
-            <link rel="apple-touch-icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon.png') }}">
-            <link rel="icon" type="image/png" href="{{ asset('wallassets/themes/_global/img/appicon/apple-touch-icon.png') }}">
+            <link rel="apple-touch-icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon.png') }}">
+            <link rel="icon" type="image/png" href="{{ asset('img/appicon/apple-touch-icon.png') }}">
 
-            <link rel="shortcut icon" type="image/x-icon" href="{{ asset('wallassets/themes/_global/img/appicon/favicon.ico') }}">
+            <link rel="shortcut icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
 
             <link rel="manifest" href="{{ asset('manifest.json') }}">
 
