--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/layout.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/layout.html.twig
@@ -17,7 +17,7 @@
         <h1 class="logo">
             {% block logo %}
                 <a title="{{ 'menu.left.back_to_unread'|trans }}" href="{{ path('unread') }}">
-                    <img width="100" height="100" src="{{ asset('wallassets/themes/_global/img/logo-w.png') }}" alt="wallabag logo" />
+                    <img width="100" height="100" src="{{ asset('img/logo-w.png') }}" alt="wallabag logo" />
                 </a>
             {% endblock %}
         </h1>
