--- a/src/Wallabag/UserBundle/Resources/views/layout.html.twig
+++ b/src/Wallabag/UserBundle/Resources/views/layout.html.twig
@@ -11,7 +11,7 @@
 <main class="valign-wrapper">
     <div class="valign row">
         <div class="card sw">
-            <div class="center"><img src="{{ asset('wallassets/themes/_global/img/logo-wallabag.svg') }}" class="typo-logo" alt="wallabag logo" /></div>
+            <div class="center"><img src="{{ asset('img/logo-wallabag.svg') }}" class="typo-logo" alt="wallabag logo" /></div>
             {% block fos_user_content %}
             {% endblock fos_user_content %}
         </div>
