--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/_tags.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/_tags.html.twig
@@ -1,7 +1,7 @@
 {% if tags is iterable and tags is not empty %}
     <ul class="tags{{ listClass|default("")}}">
         {% for tag in tags %}
-            <li class="chip">
+            <li class="chip" title="{{ tag.label }}">
                 <a href="{{ path('tag_entries', {'slug': tag.slug}) }}">{{ tag.label }}</a>
                 {% if withRemove is defined and withRemove == true %}
                     <a href="{{ path('remove_tag', { 'entry': entryId, 'tag': tag.id }) }}" onclick="return confirm('{{ 'entry.confirm.delete_tag'|trans|escape('js') }}')">
