--- a/src/Wallabag/CoreBundle/Resources/views/themes/common/Entry/_title.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/common/Entry/_title.html.twig
@@ -12,6 +12,8 @@
     {{ 'entry.page_titles.filtered_tags'|trans }} {{ filter }}
 {% elseif currentRoute == 'untagged' %}
     {{ 'entry.page_titles.untagged'|trans }}
+{% elseif currentRoute == 'same_domain' %}
+    {{ 'entry.page_titles.same_domain'|trans }}
 {% else %}
     {{ 'entry.page_titles.unread'|trans }}
 {% endif %}
