Fix accessibility problem with the 2FA QR code (#4915)
* Add alt to qr code

* Add alt to qr code

* Fix contrast for api key link

* Add translate qrcode alt

* Add translatation for QR code alternative

* Fix extra space

* Add translation for qrcode image alternative

--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Config/index.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Config/index.html.twig
@@ -84,7 +84,7 @@
                 <h3>{{ 'config.form_settings.android_configuration'|trans }}</h3>
                 <a href="wallabag://{{ app.user.username }}@{{ wallabag_url }}">{{ 'config.form_settings.android_instruction' | trans }}</a>
                 <br/>
-                <img id="androidQrcode" />
+                <img id="androidQrcode" alt="{{ 'config.otp.app.qrcode_label' | trans }}" />
                 <script>
                     document.getElementById('androidQrcode').src = jrQrcode.getQrBase64('wallabag://{{ app.user.username }}@{{ wallabag_url }}');
                 </script>
