Update link to Wallabag hosted one

--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Config/index.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Config/index.html.twig
@@ -37,7 +37,7 @@
                 {{ form_widget(form.config.reading_speed) }}
                 <p>
                     {{ 'config.form_settings.reading_speed.help_message'|trans }}
-                    <a href="https://github.com/craigmayhew/myreadspeed">myreadspeed</a>
+                    <a href="https://wallabag.github.io/myreadspeed/">myreadspeed</a>
                 </p>
             </div>
             <a href="#" title="{{ 'config.form_settings.help_reading_speed'|trans }}">
