--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Config/index.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Config/index.html.twig
@@ -58,7 +58,7 @@
                                     {{ form_label(form.config.reading_speed) }}
                                     <p>
                                         {{ 'config.form_settings.reading_speed.help_message'|trans }}
-                                        <a href="https://github.com/craigmayhew/myreadspeed">myreadspeed</a>
+                                        <a href="https://wallabag.github.io/myreadspeed/">myreadspeed</a>
                                     </p>
                                 </div>
                                 <div class="input-field col s1">
