--- a/app/Resources/static/themes/material/css/dark_theme.scss
+++ b/app/Resources/static/themes/material/css/dark_theme.scss
@@ -25,7 +25,10 @@
 
   .dropdown-content li:hover,
   .dropdown-content li.active,
-  .dropdown-content li.selected {
+  .dropdown-content li.selected,
+  .pagination li:not(.active) a:hover,
+  .pagination li:not(.active) a:active,
+  .pagination li:not(.active) a:focus {
     background-color: #2c2c2c;
   }
 
@@ -107,6 +110,10 @@
   .border-bottom,
   .collapsible {
     border-color: #222;
+  }
+
+  .pagination li.active {
+    background-color: #666;
   }
 
   @media only screen and (min-width: 992px) {
