--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/entries.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/entries.html.twig
@@ -20,6 +20,7 @@
 
 {% block content %}
     {% set listMode = app.user.config.listMode %}
+    {% set entriesWithArchivedClassRoutes = ['tag_entries', 'search', 'all'] %}
     {% set currentRoute = app.request.attributes.get('_route') %}
     {% if currentRoute == 'homepage' %}
         {% set currentRoute = 'unread' %}
@@ -57,11 +58,11 @@
         {% for entry in entries %}
             <li id="entry-{{ entry.id|e }}" class="entry col {% if listMode == 0 %}l3 m6{% else %}collection-item{% endif %} s12">
                 {% if listMode == 1 %}
-                    {% include "@WallabagCore/themes/material/Entry/_card_list.html.twig" with {'entry': entry, 'currentRoute': currentRoute} only %}
+                    {% include "@WallabagCore/themes/material/Entry/_card_list.html.twig" with {'entry': entry, 'currentRoute': currentRoute, 'routes': entriesWithArchivedClassRoutes} only %}
                 {% elseif not entry.previewPicture is null and entry.mimetype starts with 'image/' %}
-                    {% include "@WallabagCore/themes/material/Entry/_card_full_image.html.twig" with {'entry': entry, 'currentRoute': currentRoute} only %}
+                    {% include "@WallabagCore/themes/material/Entry/_card_full_image.html.twig" with {'entry': entry, 'currentRoute': currentRoute, 'routes': entriesWithArchivedClassRoutes} only %}
                 {% else %}
-                    {% include "@WallabagCore/themes/material/Entry/_card_preview.html.twig" with {'entry': entry, 'currentRoute': currentRoute} only %}
+                    {% include "@WallabagCore/themes/material/Entry/_card_preview.html.twig" with {'entry': entry, 'currentRoute': currentRoute, 'routes': entriesWithArchivedClassRoutes} only %}
                 {% endif %}
             </li>
         {% endfor %}
