Fix 5421 dark theme on the developper page

--- a/app/Resources/static/themes/material/css/dark_theme.scss
+++ b/app/Resources/static/themes/material/css/dark_theme.scss
@@ -19,6 +19,7 @@
     background-color: #121212;
   }
 
+  table.striped > tbody > tr:nth-child(2n+1),
   .dropdown-content li {
     background-color: #232323;
   }
@@ -108,7 +109,9 @@
   }
 
   .border-bottom,
-  .collapsible {
+  .collapsible,
+  .collapsible-body,
+  .collapsible-header {
     border-color: #222;
   }
 
