--- a/app/Resources/static/themes/material/css/dark_theme.scss
+++ b/app/Resources/static/themes/material/css/dark_theme.scss
@@ -119,6 +119,11 @@
     background-color: #666;
   }
 
+  .hljs {
+    color: #abb2bf;
+    background-color: #282c34;
+  }
+
   @media only screen and (min-width: 992px) {
     #article {
       background-color: #101010;
