Fix dark mode background color for pre tags
Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/app/Resources/static/themes/material/css/dark_theme.scss
+++ b/app/Resources/static/themes/material/css/dark_theme.scss
@@ -119,7 +119,8 @@
     background-color: #666;
   }
 
-  .hljs {
+  .hljs,
+  #article pre.hljs {
     color: #abb2bf;
     background-color: #282c34;
   }
