Add 'code' plugin to TinyMCE for raw HTML

--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/edit.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/edit.html.twig
@@ -10,7 +10,9 @@
 
     <script type="text/javascript">
         tinymce.init({
-            selector: '#entry_content'
+            selector: '#entry_content',
+            toolbar: 'undo redo styleselect bold italic alignleft aligncenter alignright bullist numlist outdent indent code',
+			plugins: 'code'
         });
     </script>
 
