Add support for RTL content

--- a/src/Wallabag/CoreBundle/Resources/views/base.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/base.html.twig
@@ -67,7 +67,7 @@
 
                 {% block messages %}{% endblock %}
 
-                <div id="content">
+                <div id="content" dir="auto">
                     {% block content %}{% endblock %}
                 </div>
             </main>
