--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/edit.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/edit.html.twig
@@ -32,6 +32,11 @@
                             {{ form_label(form.origin_url) }}
                             {{ form_widget(form.origin_url) }}
                         </div>
+
+                        <div class="s12">
+                            {{ form_label(form.content) }}
+                            {{ form_widget(form.content, {'attr': {'style': 'height:20em; resize:vertical;'}}) }}
+                        </div>
                         <br>
 
                         {{ form_widget(form.save, {'attr': {'class': 'btn waves-effect waves-light'}}) }}
@@ -42,5 +47,14 @@
             </div>
         </div>
     </div>
+
+    <script>
+        document.getElementById('entry_content').addEventListener('paste', event => {
+            event.preventDefault();
+            if (event.clipboardData && event.clipboardData.getData) {
+                event.target.innerHTML = event.clipboardData.getData('text/html');
+            }
+        });
+    </script>
 
 {% endblock %}
