--- a/src/Wallabag/CoreBundle/Resources/views/themes/common/Entry/entries.xml.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/common/Entry/entries.xml.twig
@@ -11,8 +11,8 @@
         <title>wallabag — {{type}} {{ tag }} feed</title>
         <subtitle type="html">Atom feed for entries tagged with {{ tag }}</subtitle>
     {% endif %}
-    {% if entries | length > 0 %}
-        <updated>{{ (entries | first).createdAt | date('c') }}</updated> {# Indicates the last time the feed was modified in a significant way. #}
+    {% if updated %}
+        <updated>{{ updated | date('c') }}</updated> {# Indicates the last time the feed was modified in a significant way. #}
     {% endif %}
     <link rel="self" type="application/atom+xml" href="{{ app.request.uri }}"/>
     {% if entries.hasPreviousPage %}
