--- a/app/Resources/static/themes/material/css/media_queries.scss
+++ b/app/Resources/static/themes/material/css/media_queries.scss
@@ -2,6 +2,12 @@
    Media queries
    ========================================================================== */
 
+@media only screen and (min-width: 450px) {
+  .row {
+    grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+  }
+}
+
 @media only screen and (min-width: 992px) {
   nav,
   body:not(.entry):not(.login) main,
