--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/entries.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/entries.html.twig
@@ -55,7 +55,7 @@
         </div>
     {% endif %}
 
-    <ol class="entries {% if listMode == 1 %}collection{% else %}row data{% endif %}">
+    <ol class="entries {% if listMode == 1 %}collection{% else %}row entries-row data{% endif %}">
 
         {% for entry in entries %}
             <li id="entry-{{ entry.id|e }}" class="{% if listMode != 0 %}col collection-item{% endif %} s12" data-entry-id="{{ entry.id|e }}" data-test="entry">
