Migrate root level template references to new notation

--- a/app/Resources/CraueConfigBundle/views/Settings/modify.html.twig
+++ b/app/Resources/CraueConfigBundle/views/Settings/modify.html.twig
@@ -1,4 +1,4 @@
-{% extends "WallabagCoreBundle::layout.html.twig" %}
+{% extends "@WallabagCore/layout.html.twig" %}
 
 {% block title %}{{ 'menu.left.internal_settings'|trans }}{% endblock %}
 
