--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/layout.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/layout.html.twig
@@ -1,4 +1,4 @@
-{% extends "WallabagCoreBundle::base.html.twig" %}
+{% extends "@WallabagCore/base.html.twig" %}
 
 {% block css %}
     {{ parent() }}
