--- a/src/Wallabag/ImportBundle/Resources/views/WallabagV2/index.html.twig
+++ b/src/Wallabag/ImportBundle/Resources/views/WallabagV2/index.html.twig
@@ -1,3 +1,3 @@
-{% extends "WallabagImportBundle:WallabagV1:index.html.twig" %}
+{% extends "@WallabagImport/WallabagV1/index.html.twig" %}
 
 {% block title %}{{ 'import.wallabag_v2.page_title'|trans }}{% endblock %}
