--- a/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
@@ -5,8 +5,8 @@
         <div class="row">
             <p>{{ 'security.resetting.description'|trans({}, "messages") }}</p>
 
-            {% for flashMessage in app.session.flashbag.get('notice') %}
-                <span class="black-text"><p>{{ flashMessage }}</p></span>
+            {% for flash_message in app.session.flashbag.get('notice') %}
+                <span class="black-text"><p>{{ flash_message }}</p></span>
             {% endfor %}
 
             {% if invalid_username is defined %}
