--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Config/otp_app.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Config/otp_app.html.twig
@@ -33,9 +33,9 @@
                         <li>
                             <p>{{ 'config.otp.app.two_factor_code_description_4'|trans }}</p>
 
-                            {% for flashMessage in app.session.flashbag.get("two_factor") %}
+                            {% for flash_message in app.session.flashbag.get("two_factor") %}
                             <div class="card-panel red darken-1 black-text">
-                                {{ flashMessage|trans }}
+                                {{ flash_message|trans }}
                             </div>
                             {% endfor %}
 
