--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/_card_preview.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/_card_preview.html.twig
@@ -2,13 +2,13 @@
     <div class="card-body">
         <div class="card-image waves-effect waves-block waves-light">
             <ul class="card-entry-labels">
-            {% for tag in entry.tags | slice(0, 3) %}
+            {% for tag in entry.tags|slice(0, 3) %}
                 <li title="{{ tag.label }}"><a href="{{ path('tag_entries', {'slug': tag.slug}) }}">{{ tag.label }}</a></li>
             {% endfor %}
             </ul>
-            <a href="{{ path('view', { 'id': entry.id }) }}">
-                {% set previewClassModifier = entry.previewPicture ? '' : ' preview--default' %}
-                <span class="preview{{ previewClassModifier }}" style="background-image: url({{ entry.previewPicture | default(asset('img/logo-square.svg')) }})"></span>
+            <a href="{{ path('view', {'id': entry.id}) }}">
+                {% set preview_class_modifier = entry.previewPicture ? '' : ' preview--default' %}
+                <span class="preview{{ preview_class_modifier }}" style="background-image: url({{ entry.previewPicture|default(asset('img/logo-square.svg')) }})"></span>
             </a>
         </div>
         {% include "@WallabagCore/themes/material/Entry/Card/_content.html.twig" with {'entry': entry, 'withPreview': true} only %}
@@ -17,8 +17,8 @@
     <div class="card-reveal">
         <i class="card-title activator grey-text text-darken-4 material-icons right">clear</i>
         <span class="card-title">
-            <a href="{{ path('view', { 'id': entry.id }) }}" title="{{ entry.title | striptags | e('html_attr') }}">
-                {{ entry.title |  striptags | truncate(80, true, '…') | raw }}
+            <a href="{{ path('view', {'id': entry.id}) }}" title="{{ entry.title|striptags|e('html_attr') }}">
+                {{ entry.title|striptags|truncate(80, true, '…')|raw }}
             </a>
         </span>
 
