--- a/src/Wallabag/ImportBundle/Resources/views/Import/_information.html.twig
+++ b/src/Wallabag/ImportBundle/Resources/views/Import/_information.html.twig
@@ -1,6 +1,6 @@
 {% set redis = craue_setting('import_with_redis') %}
 {% set rabbit = craue_setting('import_with_rabbitmq') %}
-{% set downloadImages = craue_setting('download_images_enabled') %}
+{% set download_images = craue_setting('download_images_enabled') %}
 
 {% if redis or rabbit %}
     <div class="card-panel yellow darken-1 black-text">
@@ -8,7 +8,7 @@
     </div>
 {% endif %}
 
-{% if not redis and not rabbit and downloadImages %}
+{% if not redis and not rabbit and download_images %}
     <div class="card-panel orange darken-1 black-text">
         {{ 'import.worker.download_images_warning'|trans|raw }}
     </div>
